# student-management-system

./: pyproject.toml
student_management_system/: application.py
