[tool.poetry]
name = "student-management-system"
version = "0.1.0"
description = ""
authors = ["Pedro Henrique Gonçalves da Silva <pedro.silva8769@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.1"
dearpygui = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
